--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Flower_Stock_Exchange)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(Flower_Stock_Exchange main.cpp)
+add_executable(Flower_Stock_Exchange main.cpp orders.cpp
+        execution_rep.cpp
+        execution_rep.h)
