--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,10 @@ set(CMAKE_CXX_STANDARD 26)
 
 add_executable(Flower_Stock_Exchange main.cpp orders.cpp
         execution_rep.cpp
-        execution_rep.h)
+        execution_rep.h
+        order_book.cpp
+        order_book.h
+        account_entry.cpp
+        account_entry.h
+        account.cpp
+        account.h)
