--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,9 @@ project(Flower_Stock_Exchange)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(Flower_Stock_Exchange main.cpp orders.cpp
+add_executable(Flower_Stock_Exchange main.cpp orders.cpp orders.h
         execution_rep.cpp
         execution_rep.h
-        order_book.cpp
-        order_book.h
         account_entry.cpp
         account_entry.h
         account.cpp
