--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(Flower_Stock_Exchange main.cpp orders.cpp orders.h
         account_entry.cpp
         account_entry.h
         account.cpp
-        account.h)
+        account.h
+)
