--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Flower_Stock_Exchange)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(Flower_Stock_Exchange main.cpp orders.cpp orders.h
+add_executable(Flower_Stock_Exchange main.cpp
         account_entry.cpp
         account_entry.h
         account.cpp
@@ -13,4 +13,5 @@ add_executable(Flower_Stock_Exchange main.cpp orders.cpp orders.h
         order_book.cpp
         order_book.h
         helpers.h
+        orders.cpp
 )
